Update and rename 2024-07-27-FC-bak.md to 2024-07-27-FC.md
corrected math

--- a/_posts/2024-07-27-FC.md
+++ b/_posts/2024-07-27-FC.md
@@ -41,7 +41,7 @@ Another seminal piece of work comes from *Vernon Mountcastle* whose network stru
 ### The functional network
 
 
-Based on the *Hebbian* principle, if two neurons possess some synchronicity in their firing pattern, one can assume that they are connected. Formally \cite{Gerstein_1989} defines appartenance to a neuronal assembly by the correlation in neurons firing pattern, it is called *functional connectivity*. As an extension, the connection direction can be assessed by looking at delays in the correlation. In this framework, *effective connectivity* is defined by a weight matrix $W$ such as $x_j = \sum_{i}W_{ij}x_i$ where $x_i$ represents the activity of a single neuron. It is precised in \cite{Gerstein_1989} that $W$ is usually non symmetrical for brain processes. 
+Based on the *Hebbian* principle, if two neurons possess some synchronicity in their firing pattern, one can assume that they are connected. Formally \cite{Gerstein_1989} defines appartenance to a neuronal assembly by the correlation in neurons firing pattern, it is called *functional connectivity*. As an extension, the connection direction can be assessed by looking at delays in the correlation. In this framework, *effective connectivity* is defined by a weight matrix $$W$$ such as $$x_j = \sum_{i}W_{ij}x_i$$ where $$x_i$$ represents the activity of a single neuron. It is precised in \cite{Gerstein_1989} that $$W$$ is usually non symmetrical for brain processes. 
  
 In \cite{Friston_93} the operational limit of such framework is presented. Indeed, recordings of neuronal spike trains are limited in terms of units that could be recorded at the same time. As a result, intermediary polysynaptic pathways are missed or can only be hypothesised. Therefore the principle is generalised and functional connectivity defined as "*the observed temporal correlation between two electro/neurophysiological measurements from different parts of the brain*". In this case **Postion Emission Tomography (PET)** signal is used to observe coactivation of different regions of the brain. In this article \emph{Friston} uses the **Principal Component analysis (PCA)** to investigate networks of functional connectivity. 
 
@@ -53,29 +53,31 @@ In \cite{Biswal_1995}, for the first time, the study focuses on inter task perio
 
 ### The Default mode network
 
-In early $2000s$ \cite{Raichle_2001} report a consistently deactivated cluster of regions during tasks. Based on previous findings from their team \cite{Shulman_1997}, they summarise PET observations which resonates with previous reports \cite{Friston_93} of regions whose activity increase at rest and disappear during tasks. This observation is confirmed in multiple cases (visual, acoustic, rest with eyes open or close) \cite{Franson_2006} and give rise to the concept of **Default Mode Network (DMN)** which designs this specific cluster (containing the posterior and ventral anterior cingulate cortex ($PCC$, $vACC$), the precuneus $PC$ and the medial prefrontal cortex $mPFC$). Coupling the **resting-state Functional Connectivity (rs-FC)** approach with this new finding, \cite{Greicius_2003} shows that these regions also exert strong connectivity at rest. 
+In early $$2000s$$ \cite{Raichle_2001} report a consistently deactivated cluster of regions during tasks. Based on previous findings from their team \cite{Shulman_1997}, they summarise PET observations which resonates with previous reports \cite{Friston_93} of regions whose activity increase at rest and disappear during tasks. This observation is confirmed in multiple cases (visual, acoustic, rest with eyes open or close) \cite{Franson_2006} and give rise to the concept of **Default Mode Network (DMN)** which designs this specific cluster (containing the posterior and ventral anterior cingulate cortex ($$PCC$$, $$vACC$$), the precuneus $$PC$$ and the medial prefrontal cortex $$mPFC$$). Coupling the **resting-state Functional Connectivity (rs-FC)** approach with this new finding, \cite{Greicius_2003} shows that these regions also exert strong connectivity at rest. 
 
 
 All together these findings are interpreted as follow \cite{Greicius_2003}:
 
-1. $PCC$, $vACC$, $PC$ and $mPFC$, part of the anatomical network appear strongly connected together.
-2.  Under rest condition, when the brain tunes to default mode, this connectivity can be measured with \gls{fmri} in the form of a strongly coupled $\sim0.1Hz$ oscillation.
-3.   This network deactivates when brain shifts states toward a task driven mode.
+1. $$PCC$$, $$vACC$$, $$PC$$ and $$mPFC$$, part of the anatomical network appear strongly connected together.
+2. Under rest condition, when the brain tunes to default mode, this connectivity can be measured with **functional MRI (fMRI)** in the form of a strongly coupled $$\sim0.1Hz$$ oscillation.
+3. This network deactivates when brain shifts states toward a task driven mode.
 
 In *Greicius* terms it provides "*the most compelling evidence to date for the existence of a cohesive, tonically active, default mode network*".
 
 
-We can now affirm that this (DMN) is only one of the multiple networks identified during resting state. In humans, \cite{Van_den_Heuvel_2010} reviews the main networks found in *(a)* \cite{Biswal_1995}, *(b)* \cite{Beckmann_2005}, *(c)* \cite{DeLuca_2006}, *(d)* \cite{damoiseaux_2006}, *(e)* \cite{Salvador_2005}, *(f)* \cite{Van_den_Heuvel_2008}. All together $8$ main networks associated to resting state are identified and mostly related to somatosensory regions (see: **Fig2.**): primary motor, primary visual, extra-striate visual, insular-temporal/ACC, left parietal-frontal, right parietal-frontal, default mode network and frontal network. These are usually refered to as **Resting State Networks (RSN)**.
+We can now affirm that this (DMN) is only one of the multiple networks identified during resting state. In humans, \cite{Van_den_Heuvel_2010} reviews the main networks found in *(a)* \cite{Biswal_1995}, *(b)* \cite{Beckmann_2005}, *(c)* \cite{DeLuca_2006}, *(d)* \cite{damoiseaux_2006}, *(e)* \cite{Salvador_2005}, *(f)* \cite{Van_den_Heuvel_2008}. All together $$8$$ main networks associated to resting state are identified and mostly related to somatosensory regions (see: **Fig2.**): primary motor, primary visual, extra-striate visual, insular-temporal/ACC, left parietal-frontal, right parietal-frontal, default mode network and frontal network. These are usually refered to as **Resting State Networks (RSN)**.
 
 
 <img src="https://JCMariani.github.io/assets/img/post-00_resting_state_networks.jpg" alt="drawing" width="75%" class="center"/>
 ^**Fig2.** Illustration of the main resting state netowrks identified by **Independant Component Analysis** across six different studies from \cite{Van_den_Heuvel_2010}. These mode can be identified reliably across multiple cohorts with an unbiased method.^
 
 
-From these observation, researchers started to question the function of such covarying regions. The overlap with known function (visual regions, motor cortex...) is interpreted as anatomical relevance \cite{Van_den_Heuvel_2010}. The main model suggests that the underlying neuronal network imposes physical connection between regions far apart. During activity, task related regions show correlation related to the task. Outside of the stimulation the physical link remains. As a result spontaneous activations of neurons favourably propagate within this sub-network. The coactivating patterns observed around $0.1Hz$ would be triggered by this spontaneous propagation of information in the brain channelled in specific resting states networks. A potential mechanisms underlying these fluctuation has been presented in \niceRef{sssec:vasomotion}, where spontaneous vasomotion which oscillates with short distance coherence is tuned to local neuronal activity. The coactivation of neurons along these subnetworks would synchronise vascular tone along these axes and engender rs-FC patterns \cite{Mateo2017-wp}.
+From these observation, researchers started to question the function of such covarying regions. The overlap with known function (visual regions, motor cortex...) is interpreted as anatomical relevance \cite{Van_den_Heuvel_2010}. The main model suggests that the underlying neuronal network imposes physical connection between regions far apart. During activity, task related regions show correlation related to the task. Outside of the stimulation the physical link remains. As a result spontaneous activations of neurons favourably propagate within this sub-network. The coactivating patterns observed around $$0.1Hz$$ would be triggered by this spontaneous propagation of information in the brain channelled in specific resting states networks. A potential mechanisms underlying these fluctuation has been presented in \niceRef{sssec:vasomotion}, where spontaneous vasomotion which oscillates with short distance coherence is tuned to local neuronal activity. The coactivation of neurons along these subnetworks would synchronise vascular tone along these axes and engender rs-FC patterns \cite{Mateo2017-wp}.
 
 
 The default mode network is a typical example and a most studied resting state network. Due to its peculiar functional role associated to rest, it has been a key target to understand the need of such an energy expending mechanism where rest would suggest energy saving. \cite{Greicius_2003} shows reduced connectivity within the (DMN) in the case of *Alzheimer*'s disease patients. The salience network, composed of the dorsal anterior cingulate, bilateral orbitofrontal and insular cortices has been demonstrated to be of importance in behaviour control \cite{Pievani_2014}. Alternatively, the frontoparietal network is involved in memory, language and perception \cite{Pievani_2014}. It is now well accepted that these RSNs can be used as biomarkers of neurodegenerative diseases \cite{Filippi2019}.
+
+
 
 
 
